# trion-samples

./: Cargo.toml  README.md
.github/workflows/: test.yml
samples/rp2040/: resets.asm
samples/rp2040/pins/: gpio.asm
samples/rp2040/run/: ram_gpio_blink.asm
src/: lib.rs  rp2040.rs
