[package]
name = "trion-samples"
edition = "2021"
publish = false
exclude = ["/.github/"]
description = "Sample programs for use with, and testing of, the trion assembler."
authors = ["KosmosPrime <5663514+KosmosPrime@users.noreply.github.com>"]
repository = "https://github.com/KosmosPrime/trion"
readme = "README.md"
license = "GPL-3.0-or-later"

[dependencies]
trion = "0.7.1"
